# einsum

./: .gitignore  CMakeLists.txt  README.md  benchmark.npy  bmm_v1.cpp  bmm_v2.cpp  bmm_v3.cpp  bmm_v4.cpp  bmm_v6.cpp  bmm_v7.cpp  bmm_v8.cpp  fast_einsum_v1.py  fast_einsum_v2.py  fast_einsum_v3.py  fast_einsum_v4.py  fast_einsum_v6.py  fast_einsum_v7.py  fast_einsum_v8.py  kernel.cpp  kernel.h  kernel_col_maj.cpp  kernel_col_maj.h  main.py  mm_col_maj.cpp  mm_row_maj.cpp  test.py  trash.cpp  trash2.cpp  trash_bmm_v5.cpp  trash_fast_einsum_v5.py  v6_trash.py
benchmark/: benchmark.npy  benchmark.py  benchmark_cases.txt  bmm_v1234t.npy  bmm_v1234t.txt  eins_npv1234t_12.npy  times.txt  torch_v7_108.npy  torch_v7_v8_96.npy  torch_v8_108.npy  v2_20.npy  v2_v3_torch_12.npy
